# the-plan

./: .gitignore  Makefile
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/migrations/: 001_init.sql  002_indexes.sql  003_ai_rate_limit.sql
backend/src/: auth.rs  crypto.rs  db.rs  main.rs  models.rs  rate_limit.rs  session.rs
backend/src/routes/: ai.rs  auth.rs  budget.rs  categories.rs  export.rs  friends.rs  leaderboard.rs  mod.rs  progress.rs  progressions.rs  schedules.rs
frontend/: eslint.config.js  index.html  package.json
frontend/src/: App.jsx  api.js  main.jsx  responsive.css  styles.js  theme.js
frontend/src/components/: BudgetBar.jsx  ColorPicker.jsx  ErrorBoundary.jsx  Modal.jsx  PhaseCard.jsx  ProgressionTab.jsx  ScheduleRow.jsx  Tag.jsx  TimeRangeInput.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Friends.jsx  InviteAccept.jsx  Leaderboard.jsx  Login.jsx  Profile.jsx  UserView.jsx
frontend/src/utils/: timeParser.js
scripts/: deploy.sh  install-service.sh  setup-runner.sh  theplan
